# shake-telemetry

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  PROBLEM.md  README.md  ROADMAP.md  devenv.nix  shake-telemetry.cabal
.github/workflows/: ci.yml
docs/: thread-context-loss-fix.md  thread-context-loss-path-forward.md  thread-context-loss-remediation.md  thread-context-loss.md
docs/plans/: 2026-02-15-critical-path-viewer.md
plans/: 2026-02-07-phase4-output-formats.md  2026-02-07-phase5-shake-api-wrapping.md  2026-02-07-phase7-integration-testing.md  2026-02-07-phase8-cached-rule-detection.md
src/Development/Shake/: Telemetry.hs
src/Development/Shake/Telemetry/: CriticalPath.hs  Graph.hs  Json.hs  Mermaid.hs  State.hs
src/Development/Shake/Telemetry/Wrap/: Actions.hs  Entry.hs  Parallel.hs  Reexports.hs  Rules.hs
test/: Main.hs
test/Test/Telemetry/: CriticalPathProps.hs  CriticalPathTest.hs  IntegrationTest.hs  JsonTest.hs  MermaidTest.hs  ParityTest.hs  StateTest.hs  ThreadContextLossTest.hs  WrapTest.hs
